--- a/style/analisis_edad.css
+++ b/style/analisis_edad.css
@@ -1,26 +1,26 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
-    margin: 0;
+    margin: 60px;
     padding: 0;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-image: url(../img/cod.jpg) ;
+    background-image: url(../img/purpler.jpg) ;
     background-size: cover;
 }
 .title{
     font-size: 2em;
     text-align: center;
-    color: rgb(248, 243, 243);
+    color: rgb(15, 15, 15);
 }
 .parrafo{
     font-family: Arial, Helvetica, sans-serif;
-    color: #f5f5f7;
+    color: #111111;
     align-items: center;
     font-size: 1.5em;
 }
 .field{
-    color: rgb(252, 252, 252);
+    color: rgb(17, 17, 17);
     font-size: 1.4em;
     text-align: center;
 }
@@ -47,4 +47,31 @@ body {
 }
 .my-button:active {
     background-color: #0e0ca3;
+}
+nav {
+    z-index: 999;
+    position: fixed;
+    top: 40px;
+    border-radius: 30px 30px 30px 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #33333380;
+    backdrop-filter: blur(10px);
+    color: white;
+    height: 40px;
+}
+nav a {
+    color: white;
+    text-decoration: none;
+    padding: 10px 15px;
+    cursor: pointer;
+}
+nav ul{
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
