--- a/style/palidromo.css
+++ b/style/palidromo.css
@@ -1,13 +1,64 @@
-body {
-    background-color: #f8f9fa;
-}
-
 .container {
     max-width: 600px;
     margin: auto;
     text-align: center;
+    padding: 3em;
 }
 
 .btn {
     border-radius: 0;
+}
+body {
+    background-color: #f0f0f0;
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image: url(../img/purpler.jpg) ;
+    background-size: cover;
+}
+nav {
+    z-index: 999;
+    position: fixed;
+    top: 40px;
+    border-radius: 30px 30px 30px 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #33333380;
+    backdrop-filter: blur(10px);
+    color: white;
+    height: 40px;
+}
+nav a {
+    color: white;
+    text-decoration: none;
+    padding: 10px 15px;
+    cursor: pointer;
+}
+nav ul{
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.my-button {
+    padding: 10px 20px;
+    background-color: #080808;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-left: auto;
+    margin-right: auto;
+}
+.my-button:hover {
+    background-color: #0516b1;
+}
+.my-button:active {
+    background-color: #0e0ca3;
 }
