--- a/style/style.css
+++ b/style/style.css
@@ -74,3 +74,26 @@ nav ul{
 .my-button:active {
     background-color: #0e0ca3;
 }
+
+nav ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+nav ul li {
+    display: inline;
+    margin-right: 15px;
+}
+
+nav ul li a {
+    text-decoration: none;
+    color: black;
+    padding: 5px 10px;
+    transition: background-color 0.3s;
+}
+
+nav ul li a.active {
+    background-color: black;
+    color: white;
+    border-radius: 5px;
+}
